--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,10 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+        
+        <TextView 
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ccc"
+            android:gravity="center"
+            android:text="上框"
+            />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vPager"
